# wechat-claw

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  SOUL.md  main.py  pyproject.toml  run-news-analysis-loop.sh
input/: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
input/data/archived/2026-03-09/: 01-202603093665426461.md  01-202603093665495510.md  01-202603093665565950.md  01-202603093665668384.md  01-202603093665832571.md  01-202603093665883237.md  01-电网设备概念反复走高.md  02-202603093665437220.md  02-202603093665499464.md  02-202603093665584082.md  02-202603093665707698.md  02-202603093665834749.md  02-今年将制定国有资产法、金融法等.md  02-电力板块逆势拉升.md  03-202603093665453780.md  03-202603093665505851.md  03-202603093665615952.md  03-202603093665765574.md  03-202603093665844763.md  (+18 more)
input/data/raw/: eastmoney-yw-2026-03.md
input/data/state/: eastmoney-yw-state.json
input/deploy/macos/: com.myhron.eastmoney-yw.plist
input/deploy/windows/: install-task.ps1  uninstall-task.ps1
input/docs/plans/: 2026-03-08-eastmoney-article-batches-design.md  2026-03-08-eastmoney-article-batches.md  2026-03-08-eastmoney-yw-design.md  2026-03-08-eastmoney-yw.md
input/scripts/: run-eastmoney-yw.bat  run-eastmoney-yw.sh
input/src/eastmoney_kuaixun/: __init__.py  article_writer.py  client.py  config.py  daemon.py  models.py  state.py  writer.py
input/tests/eastmoney_kuaixun/: test_article_writer.py  test_client.py  test_daemon.py  test_integration_flow.py  test_main_loop.py  test_models.py  test_state.py  test_writer.py
input/tests/fixtures/: count_payload.json  detail_page.html  list_payload.json
(+151 files in other folders)
