[project]
name = "wechat-claw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
