[project]
name = "wechat-claw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-cocoa>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-quartz>=12.1; sys_platform == 'darwin'",
    "uiautomation>=2.0.18; sys_platform == 'win32'",
    "pyautogui>=0.9.54; sys_platform == 'win32'",
    "pyperclip>=1.8.2; sys_platform == 'win32'",
    "pywin32>=311; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
