[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eastmoney-yw-collector"
version = "0.1.0"
description = "Cross-platform EastMoney YW markdown collector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
eastmoney-yw = "eastmoney_kuaixun.daemon:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/eastmoney_kuaixun"]
